# Rippix

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.plugin  README.plugin_spec_v0.1  README.plugin_tester  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ripperX.1  ripperX.desktop  ripperX.pc.in
config/: Makefile.in
plugins/: Makefile.am  Makefile.in  ripperX_plugin-8hz-mp3.c  ripperX_plugin-bladeenc.c  ripperX_plugin-cdparanoia.c  ripperX_plugin-encode.c  ripperX_plugin-flac.c  ripperX_plugin-gogo.c  ripperX_plugin-l3enc.c  ripperX_plugin-lame.c  ripperX_plugin-mp3enc.c  ripperX_plugin-musepack.c  ripperX_plugin-oggenc.c  ripperX_plugin-toolame.c  ripperX_plugin-xingmp3enc.c  ripperX_plugin_tester.c
po/: Makefile.in.in  Makevars  POTFILES.in  de.gmo  de.po  en_GB.gmo  en_GB.po  es.gmo  es.po  gl.gmo  gl.po  it.gmo  it.po  rippix.pot
share/: Makefile.am  Makefile.in  configdialog.ui  mainwindow.ui  rippix.schemas  selectframe.ui
src/: Makefile.am  Makefile.in  cddb.c  cddb.h  cddbp.c  cddbp.h  common.h  config_rw.c  config_rw.h  config_window_handler.c  config_window_handler.h  dir_window_handler.c  dir_window_handler.h  err_dialog_handler.c  err_dialog_handler.h  gettext.h  interface_common.h  job_control.c  job_control.h  main.c  main.h  main_window_handler.c  main_window_handler.h  misc_utils.c  misc_utils.h  old_err_dialog_handler.c  players_manipulation.c  players_manipulation.h  ripper_encoder_manipulation.c  ripper_encoder_manipulation.h  rw_config.c  rw_config.h  select_frame_handler.c  select_frame_handler.h  status_frame_handler.c  status_frame_handler.h  version.h  version.h.in  windowbuilder.c  windowbuilder.h
