# Copyright (C) 2011,2012 Aljosha Papsch <papsch.al@googlemail.com>
# and ripperX developers (http://sourceforge.net/projects/ripperx)
#
# This file is part of Rippix.
#
# Rippix is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or (at
# your option) any later version.
#
# Rippix is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see `http://www.gnu.org/licenses/'.

bin_PROGRAMS = \
	ripperX_plugin-8hz-mp3 \
	ripperX_plugin-bladeenc \
	ripperX_plugin-cdparanoia \
	ripperX_plugin-encode \
	ripperX_plugin-flac \
	ripperX_plugin-gogo \
	ripperX_plugin-l3enc \
	ripperX_plugin-lame \
	ripperX_plugin-mp3enc \
	ripperX_plugin-musepack \
	ripperX_plugin-oggenc \
	ripperX_plugin-toolame \
	ripperX_plugin-xingmp3enc \
	ripperX_plugin_tester

BASENAMES = \
	ripperX_plugin-8hz-mp3 \
	ripperX_plugin-bladeenc \
	ripperX_plugin-cdparanoia \
	ripperX_plugin-encode \
	ripperX_plugin-flac \
	ripperX_plugin-gogo \
	ripperX_plugin-l3enc \
	ripperX_plugin-lame \
	ripperX_plugin-mp3enc \
	ripperX_plugin-musepack \
	ripperX_plugin-oggenc \
	ripperX_plugin-toolame \
	ripperX_plugin-xingmp3enc \
	ripperX_plugin_tester

#PLUGIN_OFILES = $(addsuffix .o, $(PLUGINS))

#PLUGIN_CFILES = $(addsuffix .c, $(PLUGINS))


all: ripperX_plugin_tester $(PLUGINS)

#.c.o:
#	$(CC) $(CFLAGS) $(LDFLAGS) -c $< -o $@

